# daytime

./: .gitignore  .gitignore.orig  CMakeLists.txt  README.md  addrinfo.h  addrtostr.cpp  addrtostr.h  common.h  daytimecli.cpp  daytimesrv.cpp  resolver.cpp  resolver.h  socket.cpp  socket.h
